DTGB-573: Update link styling to make sure icons don't wrap to the next line

--- a/components/21-atoms/link/_link.scss
+++ b/components/21-atoms/link/_link.scss
@@ -97,7 +97,9 @@ a {
   &.standalone-link {
     @include icon(arrow-right, after);
 
+    display: inline-block;
     margin-left: 0;
+    padding-right: calc(#{$link-padding} + 1.5em + .2rem);
     padding-left: 0;
     text-decoration: none;
 
@@ -106,6 +108,11 @@ a {
       @include theme('color', 'color-primary--darken-2', 'link-hover-color');
 
       background-color: transparent;
+    }
+
+    &::after {
+      display: inline-block;
+      margin-right: calc(-1em - .2rem - #{$link-padding});
     }
   }
 
@@ -118,10 +125,12 @@ a {
   &[download]:not(.button),
   &[href^="http://"]:not(.button),
   &[href^="https://"]:not(.button) {
-    display: inline;
+    display: inline-block;
+    padding-right: calc(#{$link-padding} + 1.5em + .2rem);
 
     &::after {
       display: inline-block;
+      margin-right: calc(-1em - .2rem - #{$link-padding});
       text-decoration: none;
       overflow: hidden; // Hides text decoration underline.
     }
